# mlir-toy

./: .clangd
ch01/.cache/clangd/index/: Lexer.h.4DEF150767DF4907.idx  Parser.h.C8ADF8F9B1F6D367.idx
ch02/: CMakeLists.txt  test.mlir
ch02/.cache/clangd/index/: AST.cpp.F661648E506D4CAB.idx  AST.h.C49E0B2009375AC0.idx  toyc.cpp.5F48D052B6A28CF2.idx
learn/ch2/: .lit_test_times.txt  lit.cfg.py
